  * Spring configuration
  * chained "content roots"
 Libraries
  * commons-fileUpload 1.2.1
  * commons-io 1.4
  * log4j-1.2.15 (remove nlog4j)
  * netcdf-java 4.0

Release Details:
 16:
  Allow use of alternate CrawlableDataset implementations in NcML aggregation
  Improved error handling
  Clean up logging
  Minor bug fixes
 15:
  opendap configuration in threddsConfig.xml
  opendap: add DAS to DDX with myDDS.ingestDAS( ds.getDAS());
  Add Reinit back
  Enhance datasetScan/addTimeCoverage to allow matching on the dataset path
  Update the NCEP SREF datasets in IDD and IDV catalogs
 14:
  WMS: minor configuration improvements
  cdmremote service
 12:
  WMS: improved logging and exception handling.
  Minor bug fixes.
 11:
  WMS SERVICE parameter requirement aligned with specification.
  OPeNDAP error responses use correct "Content-Description header value ("dods-error").
 10:
  WMSController finally always closes dataset
  stricter ncss query parsing
  NcDODSServlet refactored to OpendapServlet: Redo error handling, put 500 Mb limit
 09:
  admin/log/ interface
  logging cleanup
  try to get new GRIB/Grid to work correctly on server
 08:
  candidate beta-release to 8080
  various cleanup
  use GRIB/Grid refactor i jCDM
 07:
  Rebuild opendap.jar with html page links corrected
  Port improved WMS version negotiation from ncWMS.
 06:
  cdmValidator in separate servlet
  opendap version string can be set in threddsConfig
  NcDods: tolerate anonymous dimensions
  various multithreading bugs
  clean up cache handling, netcdfFile object lifecycle
  clean up logging messages
 05:
  catalog.xml cleanup, fixes. change to version=1.0.2
  Error handling in RadarServer, GridServlet, ServletUtil.handleExcception
  DQC, Catgen fixes
  ToolsUI viewer now works
  DQCServlet now works
  WCS working
  WMS logging switched to slf4j
  ToolsUI.jnlp was wrong
  clean up catalog warning messages
  new FMRC definition files - correct for now
  CdmInit for initializing CDM propoerly
 04: