@@ -57,11 +57,13 @@ addition of an OGC WMS service, thanks to our collaborators Jon Blower
 Service) who did the hard work. </p>
 <ul>
   <li><a href="ftp://ftp.unidata.ucar.edu/pub/thredds/4.0/thredds.war">Download</a> the latest version 4.0 (requires Java 1.6.) <a href="ftp://ftp.unidata.ucar.edu/pub/thredds/4.0/CHANGES.txt">Change Log</a>. </li>
-  <li><a href="tds4.0/UpgradingTo4.0.html">Upgrading to TDS 4.0</a></li><li><a href="tds4.0/reference/index.html">TDS 4.0 Reference Documentation</a> [still porting from&nbsp;3.17]</li>
+  <li><a href="tds4.0/UpgradingTo4.0.html">Upgrading to TDS 4.0</a></li>
+  <li><a href="tds4.0/reference/index.html">TDS 4.0 Reference Documentation</a></li>
 </ul>
 <p><strong>TDS version 3.17 </strong>is the previous stable release. It requires Java 1.5+. It is no longer being improved, and only critical bugs are being fixed. </p>
 <ul>
-  <li><a href="ftp://ftp.unidata.ucar.edu/pub/thredds/3.17/thredds.war">Download</a> the latest stable version (3.17). <a href="ftp://ftp.unidata.ucar.edu/pub/thredds/3.17/CHANGES.txt">Change Log</a>. </li>
+  <li><a href="ftp://ftp.unidata.ucar.edu/pub/thredds/3.17/thredds.war">Download</a> the latest stable version (3.17). <a href="ftp://ftp.unidata.ucar.edu/pub/thredds/3.17/CHANGES.txt">Change Log</a>.</li>
+  <li><a href="tds3.17/reference/index.html">TDS 3.17 Reference Documentation</a> </li>
 </ul>
 <h2>Documentation</h2>
 <ul>
