@@ -21,10 +21,10 @@
        &lt;serviceName&gt;<strong>subsetServer</strong>&lt;/serviceName&gt; 
 &nbsp;&nbsp;&nbsp; &lt;/dataset&gt; </pre>
   <p>Note that the name of the service ( <em>subsetServer</em> in this example) is arbitrary, but the <strong>serviceType </strong>and<strong> base </strong>must be exactly as shown. The <strong>suffix</strong> is currently needed to make the TDS web pages work correctly. </p>
-  <p>2. In the <a href="ThreddsConfigXMLFile.html#NetcdfSubsetService">threddsConfig.xml file</a>, enable the NetcdfSubsetService. </p>
+  <p>2. In the <a href="../tds3.17/reference/ThreddsConfigXMLFile.html#NetcdfSubsetService">threddsConfig.xml file</a>, enable the NetcdfSubsetService. </p>
   <p>&nbsp;</p>
   <h2>Restrictions on what files can be served </h2>
-  <p>Only Gridded Data can be served, e.g. model data and non-swath sattelite data. The datasets must be in a format that the CDM can read. To check both of these, open  your file in the <a href="http://www.unidata.ucar.edu/software/netcdf-java/v2.2/webstart/index.html">NetCDF ToolsUI program</a>, using the <em><strong>Grids</strong></em> Tab. Any  fields identified as grids will show up in the top table. To be sure, go into the viewer (click <img src="../images/redraw.jpg" width="35" height="33" align="middle"> to bring up the Viewer, then click <img src="../images/redraw.jpg" width="35" height="33" align="middle"> again to show the data) and make sure the data is displayed correctly. If all that works, then the data should be served correctly by the TDS. </p>
+  <p>Only Gridded Data can be served, e.g. model data and non-swath sattelite data. The datasets must be in a format that the CDM can read. To check both of these, open  your file in the <a href="http://www.unidata.ucar.edu/software/netcdf-java/v2.2/webstart/index.html">NetCDF ToolsUI program</a>, using the <em><strong>Grids</strong></em> Tab. Any  fields identified as grids will show up in the top table. To be sure, go into the viewer (click <img src="../images/redraw.gif" width="20" height="20" align="middle"> to bring up the Viewer, then click <img src="../images/redraw.gif" width="20" height="20" align="middle"> again to show the data) and make sure the data is displayed correctly. If all that works, then the data should be served correctly by the TDS. </p>
   <p>&nbsp;  </p>
   <hr WIDTH="100%">
   <address>
