@@ -3,7 +3,7 @@
 <html>
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
-<META HTTP-EQUIV="Refresh" CONTENT="0; URL=.../tds4.0/reference/index.html">
+<META HTTP-EQUIV="Refresh" CONTENT="0; URL=/projects/THREDDS/tech/tds4.0/reference/index.html">
 <title>Redirect</title>
 </head>
 
