@@ -4,7 +4,7 @@
 <body>
 <h1><img src="../../images/unidataLogo.png" align="middle" height="150" width="146">THREDDS Reference Documentation (3.17)</h1>
 <hr>
-<h2>TDS 4.0 is now the stable release. <a href="../tds4.0/reference/index.html">Reference Documentation for TDS 4.0</a></h2>
+<h2>TDS 4.0 is now the stable release. <a href="../../tds4.0/reference/index.html">Reference Documentation for TDS 4.0</a></h2>
 <h2>THREDDS Catalogs</h2>
 <ul>
   <li>Version&nbsp;1.0.2</li>
