@@ -17,7 +17,7 @@ giving your gridded datasets that service.</li>
   </ul>
 <pre style="margin-left: 40px;">&lt;service name="wms" serviceType="WMS" base="<strong>/thredds/wms/</strong>" /&gt;<br>&lt;dataset name="my gridded dataset" urlPath="so/cool/data.nc" &gt;<br>  &lt;serviceName&gt;<strong>wms</strong>&lt;/serviceName&gt;<br>&lt;/dataset&gt;<br></pre>
 <blockquote>
-  <p>  You must also explicitly enable the WMS service in  <a href="../reference/ThreddsConfigXMLFile.html#WMS">threddsConfig.xml</a>:</p>
+  <p>  You must also explicitly enable the WMS service in  <a href="reference/ThreddsConfigXMLFile.html">threddsConfig.xml</a>:</p>
 </blockquote>
 <pre style="margin-left: 40px;">&lt;WMS&gt;<br>  &lt;allow&gt;true&lt;/allow&gt;<br>&nbsp; &lt;paletteLocationDir&gt;palettes&lt;/paletteLocationDir&gt;  <br>  ...<br>&lt;/WMS&gt;</pre>
 <p>See <a href="reference/WMS.html">THREDDS Web Map Service</a> for complete details.</p>
