@@ -97,11 +97,11 @@ is occurring. The files are deleted after a successful download. </li>
  </ol>
 <h3>Loadable Viewers</h3>
  <pre>   &lt;<strong>Viewer</strong>&gt;my.package.MyViewer&lt;/Viewer&gt;</pre>
- <p>You can place a link  to your own <em><strong>Viewer</strong></em>  on the TDS HTML page, by loading a <a href="Viewers.html">viewer</a> at runtime. </p>
- <h3>Loadable Dataset Source </h3>
+ <p>You can place a link  to your own <em><strong>Viewer</strong></em>  on the TDS HTML page, by loading a <a href="../../reference/Viewers.html">viewer</a> at runtime. </p>
+<h3>Loadable Dataset Source </h3>
  <pre>   &lt;<strong>DatsetSource</strong>&gt;my.package.DatsetSourceImpl&lt;/<strong>DatsetSource</strong>&gt;</pre>
- <p>You can add  a <em><strong>DataSource</strong></em> - essentially an IOSP with access to Servlet request parameters, by loading a <a href="DatasetSource.html">dataset source</a> at runtime. </p>
- <h3>FmrcInventory</h3>
+ <p>You can add  a <em><strong>DataSource</strong></em> - essentially an IOSP with access to Servlet request parameters, by loading a <a href="../../reference/DatasetSource.html">dataset source</a> at runtime. </p>
+<h3>FmrcInventory</h3>
  <pre>  &lt;<strong>FmrcInventory</strong>&gt;<br>    &lt;<strong>openType</strong>&gt;XML_ONLY&lt;/<strong>openType</strong>&gt;<br>  &lt;/FmrcInventory&gt;</pre>
  <p>This
 controls how the Forecast Model Run Collection Inventory Servlet opens
