@@ -27,7 +27,7 @@
   <li><a href="../UpgradingTo4.0.html">Upgrading to 4.0</a></li>
 </ul>
 
-<h3>TDS Configuration</h3><ul><li><a href="ConfigDirectory.html">TDS Configuration Directory</a></li></ul><h3>TDS Architecture</h3>
+<h3>TDS Architecture</h3>
 <ul>
   <li>TDS Architecture <a href="../../reference/TDSarchictecture.ppt">ppt</a></li>
   <li><a href="../../reference/Performance.html">Server Performance</a> </li>
@@ -52,6 +52,7 @@
 
 <h3>TDS Configuration</h3>
 <ul>
+  <li><a href="ConfigDirectory.html">TDS Configuration Directory</a></li>
   <li>Catalog and Dataset Configuration</li>
   <ul>
     <li><a href="../../reference/CatalogConfiguration.html">Configuration Catalogs </a></li>
@@ -68,7 +69,6 @@
     <li><a href="../../reference/DatasetSource.html">Dataset Source Plug-in </a></li>
     <li><a href="../../reference/Viewers.html">Adding Viewer Links </a></li>
   </ul>
-  
 </ul>
 
 <h3>Authorization</h3>
